# Cplusws

./: .gitignore  .gitmodules  README.MD  README.md  demo_01.sh  demo_02.sh  devops.txt  disk.txt  dummy.txt  imp  rooster  table.txt
algo/array/: arrayofproducts.cpp  coinchangemin.cpp  firstduplicatevalue.cpp  highestdifference.cpp  highestpeak.cpp  largestrange.cpp  mergeoverlappinginterval.cpp  moveelemtoend.cpp  practicemergeoverlappinginter.cpp  smallestdifference.cpp  sortedSquaredSeq.cpp  spiraltraverse.cpp  subarraysort.cpp  testValidatesubseq.cpp  testlogestpeak.cpp  testsmallestdiffere.cpp  threenumbersum.cpp  tournamentwin.cpp  twoNumberSum.cpp  twoNumberSum_2.cpp  validateSubSeq.cpp  zerosumsubarray.cpp
algo/recursion/source/: fibnocci.cpp  productsum.cpp
algo/string/source/: Generatedocument.cpp  caesarcipher.cpp  firstnonrepeating.cpp  palidrome.cpp  runlengthencoding.cpp  semordinalp.cpp
basics/: CMakeLists.txt  CMakePresets.json  assignment.cpp  basic  basic.cpp  console  console.cpp  function.cpp  main.cpp  math.cpp  myProgram  pointer.cpp  uni_init.cpp
cmake/1_Building_a_C++_Project_using_G++/v1/: calculator
cmake/2_Need_of_Meta_Build_System/: calculator  main.cpp
cmake/3_Build_Files_Generation_Process/: CMakeLists.txt
cmake/3_Build_Files_Generation_Process/my_math/: CMakeLists.txt
cmake/3_Build_Files_Generation_Process/my_print/: CMakeLists.txt
cmake/4_install_export/: CMakeLists.txt  main.cpp
cmake/4_install_export/my_math/: CMakeLists.txt
cmake/4_install_export/my_math/src/: addition.cpp  division.cpp
cmake/4_install_export/my_print/: CMakeLists.txt
cmake/4_install_export/my_print/src/: print_result.cpp
externalGit/: CMakeLists.txt  CMakePresets.json  main.cpp
externalGit/app/: CMakeLists.txt  main.cpp
externalGit/configured/: CMakeLists.txt  config.template.txt
externalGit/src/my_lib/: CMakeLists.txt  my_lib.cpp
fetchContent/: CMakeLists.txt
fetchContent/docs/html/: CMakeLists_8txt.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.map  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.md5  dir_37468d3d543634a0aa4099b6950b0469.html  dir_37468d3d543634a0aa4099b6950b0469_dep.map  dir_37468d3d543634a0aa4099b6950b0469_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b5f61a2224d9319fbc0e1a91381ab77.html  dir_7b5f61a2224d9319fbc0e1a91381ab77_dep.map  dir_7b5f61a2224d9319fbc0e1a91381ab77_dep.md5  files.html  globals.html  globals_func.html  graph_legend.html  index.html  link_8txt.html  my__lib_2CMakeLists_8txt.html  my__lib_8cpp.html  my__lib_8cpp__incl.map  my__lib_8cpp__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
fetchContent/docs/html/search/: all_0.js  all_3.js  all_4.js  files_2.js  searchdata.js
fetchContent/myenv/: pyvenv.cfg
interm2/: CMakePresets.json
interm2/src/my_lib/src/: my_lib.cpp
mediumbasic/: CMakeLists.txt  CMakePresets.json
piicatcher/: test.py
proj1/: basic.cpp  main.cpp  vec.cpp
pybind/: multiply_array.cpp  setup.py  test.py
udemy/LinkedList/source/: DoubleLL.cpp  circularLL.cpp  linkedlistADT.cpp  polynomialAdd.cpp  testCL.cpp
udemy/array/source/: arrayADT.cpp  myarray.cpp  test.cpp
udemy/recursion/source/: fibonacci.cpp  gcdhcf.cpp
unittests/: CMakeLists.txt  CMakePresets.json  unittests.code-workspace
unittests/app/: CMakeLists.txt  main.cpp
unittests/configured_files/include/: config.hpp
unittests/docs/: Doxyfile
unittests/python_modules/: hello.py
unittests/src/my_lib/: CMakeLists.txt  my_lib.cpp
unittests/tests/: CMakeLists.txt  main.cpp
varoptions/: CMakeLists.txt  CMakePresets.json
varoptions/src/my_lib/src/: CMakeLists.txt
